# Waste-Material-System

./: README.md  project_template.py
src/backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/backend/notebooks/: explore_data.ipynb  model_training.ipynb
src/backend/research/: trials.ipynb
src/backend/src/api/routes/: waste_management_system_route.py
src/backend/src/waste-management-system/utils/: exception.py  logger.py
src/backend/src/waste_management_system/components/: __init__.py  data_ingestion.py  data_validation.py
src/backend/src/waste_management_system/constants/: __init__.py  artifact_constants.py
src/backend/src/waste_management_system/entity/: __init__.py  artifact_entity.py  config_entity.py
src/backend/src/waste_management_system/pipeline/: train_pipeline.py
src/backend/src/waste_management_system/utils/: __init__.py  exception.py  logger.py  util.py  utils.py
src/backend/tests/unit/test_waste_management_system/test_components/: test_data_ingestion.py  test_data_validation.py
src/backend/tests/unit/test_waste_management_system/test_utils/: test_logger.py  test_utils.py
src/backend/tests/unit/test_waste_management_system/utils/: test_exception.py
