[project]
name = "backend"
version = "0.1.0"
description = "Flask backend of waste management system"
authors = [
    {name = "M-Hamza380", email = "hamza.anjum380@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gdown>=5.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.230",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",

]

# Data Analysis dependencies
data-analysis = [
    "seaborn>=0.13.2",
]

# Optional dependencies for testing, linting, etc.
[project.optional-dependencies]
linting = ['flake8', 'black', 'isort']

# Tool-specific for black configuration
[tool.black]
line-length = 125
target-version = ['py310']

# Tool-specific for isort configurations
[tool.isort]
profile = "black"
py_version = 310
skip = [".gitignore", ".dockerignore", "requirements.txt", "pyproject.toml", ".venv", ".env"]

# Tool-specific for flake8 configurations
[tool.flake8]
max-line-length = 125
py_version = 310
extend-ignore = ["E203", "E266", "W503", "E501"]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.12"]
build-backend = "uv_build"

